--- a/packages/ketcher-react/src/style/mixins.less
+++ b/packages/ketcher-react/src/style/mixins.less
@@ -444,7 +444,7 @@
   &::-webkit-scrollbar {
     width: 4px;
     height: 4px;
-    background-color: @color-scroll-inactive;
+    background-color: transparent;
     border-radius: 2px;
     -webkit-border-radius: 2px;
   }
